Shira/force-app/main/default/objects/Certificates__c/fields/CertificateNotes__c.field-meta.xml
<CustomField>
    <fullName>CertificateNotes__c</fullName>
    <label>הערות</label>
    <length>100</length>
    <type>Text</type>
</CustomField>