Shira/force-app/main/default/objects/Certificates__c/fields/CertificatePro__c.field-meta.xml
<CustomField>
    <fullName>CertificatePro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>פרויקט</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>תעודות</relationshipLabel>
    <relationshipName>CertificatePro</relationshipName>
    <type>Lookup</type>
</CustomField>