Shira/force-app/main/default/objects/Certificates__c/fields/CertificateType__c.field-meta.xml
<CustomField>
    <fullName>CertificateType__c</fullName>
    <label>סוג תעודה</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STC</fullName>
            </value>
            <value>
                <fullName>TC</fullName>
            </value>
            <value>
                <fullName>רישוי יצרן</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>