Shira/force-app/main/default/objects/Certificates__c/fields/Description_of_type_design_change__c.field-meta.xml
<CustomField>
    <fullName>Description_of_type_design_change__c</fullName>
    <label>Description of type design change</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>