Shira/force-app/main/default/objects/Certificates__c/fields/ProManagerCer__c.field-meta.xml
<CustomField>
    <fullName>ProManagerCer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>מנהל פרויקט</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>תעודות</relationshipLabel>
    <relationshipName>ProManagerCer</relationshipName>
    <type>Lookup</type>
</CustomField>